--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://thymeleaf.org/">
+<html lang="en" xmlns:th="https://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,9 +8,9 @@
 <body>
     <header>
         <nav>
-            <a th:href="@{/home}">Home</a>
-            <a th:href="@{/livros-add}">Adicionar Livros</a>
-            <a th:href="@{/livros-list}">Listar Livros</a>
+            <a th:href="/home">Home</a>
+            <a th:href="/livros-add">Adicionar Livros</a>
+            <a th:href="/livros-list">Listar Livros</a>
         </nav>
     </header>
     
