--- a/src/main/resources/template/livros-add.html
+++ b/src/main/resources/template/livros-add.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" th:href="@{css/style.css}">
 </head>
 <body>
     <header>
         <nav>
-            <a th:href="/home">Home</a>
-            <a th:href="/livros-add">Adicionar Livros</a>
-            <a th:href="/livros-list">Listar Livros</a>
+            <a href="/home">Home</a>
+            <a href="/livros-add">Adicionar Livros</a>
+            <a href="/livros-list">Listar Livros</a>
         </nav>
     </header>
     <form action="" method="post">
