--- a/src/main/resources/template/index.html
+++ b/src/main/resources/template/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://thymeleaf.org">
+<html lang="en" xmlns:th="https://thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +14,7 @@
             <a href="/livros-list">Listar Livros</a>
         </nav>
     </header>
+    <h1>Cadastro Livros</h1>
     
 </body>
 </html>
