--- a/src/main/resources/template/livros-list.html
+++ b/src/main/resources/template/livros-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://thymeleaf.org">
+<html lang="en" xmlns:th="https://thymeleaf.org/">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
             <a href="/livros-list">Listar Livros</a>
         </nav>
     </header>
-    <table class="table table-hover table-responsive w-auto table-striped">
+    <table class="table">
         <thead>
             <tr>
                 <th scope="col">ID:</th>
